simplified install and deploy scripts