@@ -1,21 +1,13 @@
 #!/bin/bash
+
 set -e
+export MAVEN_OPTS="-Xms512m -Xmx1024m -Xss16m -XX:MaxPermSize=512m"
 
-VERSION=1.0.0
-GROUP=oracle.pgx
+cd pgql-spoofax/; mvn clean install; cd ../
 
-mvn install:install-file \
-        -DgroupId=oracle.pgx \
-        -DartifactId=pgql-lang \
-        -Dversion=$VERSION \
-        -Dpackaging=jar \
-        -Dfile=pgql-lang/target/pgql-lang-$VERSION.jar \
-        -DpomFile=pgql-lang/pom.xml
+cd graph-query-ir/; mvn clean install; cd ../
 
-mvn install:install-file \
-        -DgroupId=oracle.pgx \
-        -DartifactId=graph-query-ir \
-        -Dversion=$VERSION \
-        -Dpackaging=jar \
-        -Dfile=graph-query-ir/target/graph-query-ir-$VERSION.jar \
-        -DpomFile=graph-query-ir/pom.xml
+cd pgql-lang/
+mkdir -p src/main/resources/pgql-spoofax-binaries
+unzip -oq ../pgql-spoofax/target/pgqllang-1.0.0.spoofax-language -d src/main/resources/pgql-spoofax-binaries
+mvn clean install
